--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{!-- <h1>{{title}}</h1> --}}
 
-<iframe src="https://createaclickablemap.com/map.php?&id=72496&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe>
+<iframe src="https://createaclickablemap.com/map.php?&id=72496&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe><div class="whiteBlock"></div>
 
 
 <ul class="map">
