--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -3,10 +3,15 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-ul.map {
+.whiteBlock {
+  height: 5%;
+  width: 100%;
   position: absolute;
-  margin-bottom: 25%;
   background-color: white;
+}
+
+ul.map {
+  margin: 10% 0 0 0;
 }
 
 ul.map li { 
@@ -34,5 +39,5 @@ ul.map li a:hover {
 }
 
 iframe {
-  margin: 0 0 -2% 23%;
+  margin: 0 auto -4% auto;
 }
