saving new views

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,8 @@
 {{!-- <h1>{{title}}</h1> --}}
+<a href="/login">Log in</a> </br>
+{{!-- <a href="/private">Add or delete employee (Only Admin)</a> </br> --}}
+<a href="/signup">Sign up</a> </br>
+<a href="/logout">Logout</a>
 
 <iframe src="https://createaclickablemap.com/map.php?&id=72496&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe><div class="whiteBlock"></div>
 
