--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,9 @@
-{{!-- <h1>{{title}}</h1> --}}
-<a href="/login">Log in</a> </br>
-{{!-- <a href="/private">Add or delete employee (Only Admin)</a> </br> --}}
-<a href="/signup">Sign up</a> </br>
-<a href="/logout">Logout</a>
+{{#if user}}
+<a href="/users/logout">Logout</a> <br/>
+{{else}}
+<a href="/users/login">Log in</a> </br>
+<a href="/users/signup">Sign up</a> </br>
+{{/if}}
 
 <iframe src="https://createaclickablemap.com/map.php?&id=72496&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe><div class="whiteBlock"></div>
 
