Succeded populating the users with their houses, finishing crud matrix for houses. Updated models for refs

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -3,6 +3,11 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+img {
+  width: 30%;
+  height: 30%;
+}
+
 .whiteBlock {
   height: 5%;
   width: 100%;
