--- a/views/houses/addHouse.hbs
+++ b/views/houses/addHouse.hbs
@@ -29,5 +29,5 @@
     <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <button type="submit" value="SAVE">UPDATE</button>
+  <button type="submit" value="SAVE">POST</button>
 </form>
