--- a/views/houses/houses.hbs
+++ b/views/houses/houses.hbs
@@ -1,6 +1,6 @@
 
 <div>{{#each house}}
-  <img src="{{this.imagePath}}"
+  <img src="{{this.imagePath}}">
   <p> Title:{{this.title}}</p>
   <p> Price: {{this.price}}</p>
   <p>motive: {{this.motive}}</p>
