--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,10 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
+img {
+  width: 30%;
+  height: 30%; }
+
 .whiteBlock {
   height: 5%;
   width: 100%;
