--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,8 +1,9 @@
-<h2>Extra info</h2>
+<h2>Your profile</h2>
 <div>
   <p>Username: {{this.username}}</p>
   <p><a href="/users/{{this.id}}/edit">Edit your profile</a></p>
-  <p><form action="/users/{{this.id}}/delete" method="post"> <input type="submit" value="DELETE"></input></form></p>
+  <p><a href="/Classifieds/{{this.id}}/Yours">See your classifieds</a></p>
+  <p><form action="/users/{{this.id}}/delete" method="post"> <input type="submit" value="DELETE ACCOUNT"></input></form></p>
 </div>
 
 <a href="/">Go back</a>
