modified routes and views to check for mistakes in the fields

--- a/views/users/newUser.hbs
+++ b/views/users/newUser.hbs
@@ -7,6 +7,9 @@
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password"> </br>
 
+  <label for="">Retype password:</label>
+  <input type="password" name="password2">
+
   {{#if message}}
     <div class="error-message">{{ message }}</div>
   {{/if}}
