--- a/views/users/YourClass.hbs
+++ b/views/users/YourClass.hbs
@@ -8,9 +8,9 @@
   <p>state: {{this.state}}</p>
   <p>description: {{this.description}}</p>
 
-  <p><a href="/users/{{this.id}}/edit">Edit</a></p>
+  <p><a href="/Classifieds/{{this.id}}/edit">Edit</a></p>
   {{!-- <p><a href="/Classifieds/{{this.id}}/Yours">See your classifieds</a></p> --}}
-  <p><form action="/Classifieds/{{this.id}}/delete" method="post"> <input type="submit" value="DELETE ACCOUNT"></input></form></p>
+  <p><form action="/Classifieds/{{this.id}}/delete" method="post"> <input type="submit" value="DELETE"></input></form></p>
   {{/each}}
 </div>
 
