--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,12 +4,23 @@ body {
 }
 
 img {
-  width: 30%;
-  height: 30%;
+  width: 200px;
+  height: 200px;
+}
+
+.postContainer {
+  display: flex; 
+}
+
+.actualPost {
+  justify-content: stretch;
+  flex-basis: 60%;
+  padding: 2%;
+  border: 1px black solid;
 }
 
 .whiteBlock {
-  height: 5%;
+  height: 10%;
   width: 100%;
   position: absolute;
   background-color: white;
