--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg">
+
+      </nav>
+    </div>
 
     {{{body}}}
 
