--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,15 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 img {
   width: 200px;
   height: 200px; }
 
-.postContainer {
-  display: flex; }
-
-.actualPost {
-  flex: 1;
-  justify-content: stretch;
-  flex-basis: 60%;
-  padding: 2%;
-  border: 1px black solid; }
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto; }
 
 .whiteBlock {
   height: 10%;
@@ -23,7 +18,7 @@ img {
   background-color: white; }
 
 ul.map {
-  margin: 10% 0 0 0; }
+  margin: 6% 0 0 5%; }
 
 ul.map li {
   float: left;
@@ -37,16 +32,16 @@ ul.map li {
 ul.map li a {
   margin: 0;
   padding: 0;
-  text-decoration: underline;
+  text-decoration: none;
   font-size: 12px;
   font-weight: normal;
-  color: #4591b1; }
+  color: darkorange; }
 
 ul.map li a:hover {
   text-decoration: none;
   color: #214b6e; }
 
 iframe {
-  margin: 0 auto -4% auto; }
+  margin: 3% 0 -2% 25%; }
 
 /*# sourceMappingURL=style.css.map */
