--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,14 +2,43 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg">
 
-      </nav>
-    </div>
+    <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">MyPrettyList</a>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                {{#if user}}
+                <li class="nav-item">
+                   <a class="nav-link" href="/users/{{user.id}}">Profile</a>
+                </li>
+                <li class="nav-item">
+                   <a class="nav-link" href="/Classifieds/addHousing">Add classifieds</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/users/logout">Logout</a> 
+                </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/login">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/signup">Sign Up</a>
+                </li>
+                {{/if}}
+            </ul>
+        </div>
+    </nav>
+</div>
 
     {{{body}}}
 
