--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 img {
   width: 200px;
@@ -42,6 +42,7 @@ ul.map li a:hover {
   color: #214b6e; }
 
 iframe {
-  margin: 3% 0 -2% 25%; }
+  margin: 3% auto -2% auto;
+  display: block; }
 
 /*# sourceMappingURL=style.css.map */
