--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,6 @@
 
 body { 
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 img {
@@ -51,5 +51,6 @@ ul.map li a:hover {
 }
 
 iframe {
-  margin: 3% 0 -2% 25%;
+  margin: 3% auto -2% auto;
+  display:block;
 }
