--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,16 +1,16 @@
 <form action="/users/login" method="POST">
-  <div>
-    <label for="username">Username:</label>
-    <input type="text" name="username">
+  <div class="form-group">
+    <label for="username1">Username:</label>
+    <input class="form-control" type="text" name="username" id="username1" placeholder="Enter username">
   </div>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" name="password">
+  <div class="form-group">
+    <label for="inputPassword2" >Password:</label>
+    <input type="password" class="form-control" name="password"  id="inputPassword2" placeholder="Password">
   </div>
   {{#if message}}
-    <div class="error-message">{{ message }}</div>
+    <div class="alert alert-danger" role="alert">{{ message }}</div>
   {{/if}}
   <div>
-    <input type="submit" value="Log In">
+    <input type="submit" value="Log In" class="btn btn-primary">
   </div>
 </form>
