--- a/views/users/YourClass.hbs
+++ b/views/users/YourClass.hbs
@@ -8,9 +8,12 @@
         <p> Price: {{this.price}}</p>
         <p>motive: {{this.motive}}</p>
         <p>state: {{this.state}}</p>
+        <p>Pets ok: {{this.pets}}</p>
+        <p>Laundry on site: {{this.laundry}}</p>
+        <p>Available now: {{this.available}}</p>
         <p>description: {{this.description}}</p>
 
-        <p>
+    
           <a href="/Classifieds/{{this.id}}/edit">Edit</a>
         </p>
         {{!-- <p><a href="/Classifieds/{{this.id}}/Yours">See your classifieds</a></p> --}}
