--- a/views/users/YourClass.hbs
+++ b/views/users/YourClass.hbs
@@ -4,14 +4,14 @@
   {{#each populated.classifieds}}
       <div class="actualPost"> 
         <img src="{{this.imagePath}}"/>
-        <p> Title:{{this.title}}</p>
-        <p> Price: {{this.price}}</p>
-        <p>motive: {{this.motive}}</p>
-        <p>state: {{this.state}}</p>
+        <p>Title:{{this.title}}</p>
+        <p>Price: {{this.price}}</p>
+        <p>Motive: {{this.motive}}</p>
+        <p>State: {{this.state}}</p>
         <p>Pets ok: {{this.pets}}</p>
         <p>Laundry on site: {{this.laundry}}</p>
         <p>Available now: {{this.available}}</p>
-        <p>description: {{this.description}}</p>
+        <p>Description: {{this.description}}.</p>
 
     
           <a href="/Classifieds/{{this.id}}/edit">Edit</a>
