--- a/views/users/editUser.hbs
+++ b/views/users/editUser.hbs
@@ -1,3 +1,5 @@
+ <div class="container">
+
  <h3>Edit profile</h3>
 
 <form action="/users/{{this.id}}/edit" method="post">
@@ -21,3 +23,4 @@
 
   <button  id="updateButton" type="submit" class="btn btn-primary">Update</button>
 </form>
+</div>
