--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,3 +1,4 @@
+<div class="container">
 <form action="/users/login" method="POST">
   <div class="form-group">
     <label for="username1">Username:</label>
@@ -14,3 +15,4 @@
     <input type="submit" value="Log In" class="btn btn-primary">
   </div>
 </form>
+</div>
