--- a/views/houses/addHouse.hbs
+++ b/views/houses/addHouse.hbs
@@ -1,3 +1,4 @@
+ <div class="container">
  <h3>Add New House/Apt</h3>
 
 <form action="/Classifieds/addHousing" method="post" enctype="multipart/form-data">
@@ -7,9 +8,12 @@
   <input type="text" class="form-control" name="title" id="titleAdd">
 </div>
 
-<div class="form-group">
-  <label for="priceAdd">Price:</label>
-  <input type="number" class="form-control" name="price" id="priceAdd">
+
+<div class="input-group mb-3">
+<div class="input-group-prepend">
+  <span class="input-group-text">$</span>
+  </div>
+  <input type="number" class="form-control" id="priceAdd" name="price" aria-label="Dollar amount (with dot and two decimal places)">
 </div>
 
  <div class="form-check form-check-inline">
@@ -29,12 +33,15 @@
       <option value="{{this.acronym}}">{{this.name}}</option>
     {{/each}}
   </select>
-</div>  
-
-<div class="form-group">
-  <label for="imageAdd">Images:</label>
-  <input type="file" class="form-control-file" id="imageAdd" name="photo" multiple>
 </div>
+
+<div class="input-group">
+  <div class="custom-file">
+    <input type="file"  name="photo" class="custom-file-input" id="inputGroupFile05" aria-describedby="inputGroupFileAddon05">
+    <label class="custom-file-label" for="inputGroupFile05">Images</label>
+  </div>
+</div>
+
 
 <div class="form-check">
   <input class="form-check-input" name="pets" type="checkbox" value="Yes" id="defaultCheck1">
@@ -64,3 +71,4 @@
 
   <button type="submit" value="SAVE" class="btn btn-primary">POST</button>
 </form>
+</div>
