--- a/views/users/newUser.hbs
+++ b/views/users/newUser.hbs
@@ -1,3 +1,4 @@
+<div class="container">
 <h3>Sign up</h3>
 
 <form action="/users/signup" method="POST">
@@ -21,3 +22,4 @@
   <button type="submit" class="btn btn-primary">Create account</button>
 
 </form>
+</div>
