--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Your profile</h2>
 <div>
   <p>Username: {{this.username}}</p>
@@ -7,3 +8,4 @@
 </div>
 
 <a href="/">Go back</a>
+</div>
