--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -3,9 +3,8 @@ body {
   font: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-img {
-  width: 200px;
-  height: 200px;
+.container {
+  max-width: 1400px;
 }
 
 .container-fluid {
