--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,8 @@
 body {
   font: "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-img {
-  width: 200px;
-  height: 200px; }
+.container {
+  max-width: 1400px; }
 
 .container-fluid {
   padding-right: 0;
