--- a/views/users/editUser.hbs
+++ b/views/users/editUser.hbs
@@ -2,10 +2,10 @@
 
  <h3>Edit profile</h3>
 
-<form action="/users/{{this.id}}/edit" method="post">
+<form action="/users/{{userO.id}}/edit" method="post">
   <div class="form-group">
     <label for="example1">Username:</label>
-    <input type="text" name="username" value="{{this.username}}" class="form-control" id="example1">
+    <input type="text" name="username" value="{{userO.username}}" class="form-control" id="example1">
     <small class="form-text text-muted">Pick something cool, m8</small>
   </div>
   <div class="form-group">
