--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,56 +1,25 @@
-<iframe src="https://createaclickablemap.com/map.php?&id=72496&maplocation=false&online=true" width="900" height="525" style="border: none;"></iframe><div class="whiteBlock"></div>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-10"> 
+        <div class="iframe-container">
+      <iframe src="https://makeaclickablemap.com/map.php?5e95a296727a26344d44ef7f917b715d24123a15" frameborder="0" scrolling="no"></iframe>
+      <div class="whiteBlock"></div>
+        </div>
+      </div>
 
+  <div class="col-sm-2 list-group toScrollParent">
+    <div class="toScroll">
+     {{#each states}}
+        <a class="list-group-item list-group-item-action" href="{{this.acronym}}" target="_top">{{this.name}}</a>
+    {{/each}}
+        </div>
+      </div>
+    </div>
 
-<ul class="map">
-  <li><a href="AL" target="_top">Alabama</a></li>
-  <li><a href="AK" target="_top">Alaska</a></li>
-  <li><a href="AZ" target="_top">Arizona</a></li>
-  <li><a href="AR" target="_top">Arkansas</a></li>
-  <li><a href="CA" target="_top">California</a></li>
-  <li><a href="CO" target="_top">Colorado</a></li>
-  <li><a href="CT" target="_top">Connecticut</a></li>
-  <li><a href="DE" target="_top">Delaware</a></li>
-  <li><a href="DC" target="_top">District of Columbia</a></li>
-  <li><a href="FL" target="_top">Florida</a></li>
-  <li><a href="GA" target="_top">Georgia</a></li>
-  <li><a href="HI" target="_top">Hawaii</a></li>
-  <li><a href="ID" target="_top">Idaho</a></li>
-  <li><a href="IL" target="_top">Illinois</a></li>
-  <li><a href="IN" target="_top">Indiana</a></li>
-  <li><a href="IA" target="_top">Iowa</a></li>
-  <li><a href="KS" target="_top">Kansas</a></li>
-  <li><a href="KY" target="_top">Kentucky</a></li>
-  <li><a href="LA" target="_top">Louisiana</a></li>
-  <li><a href="ME" target="_top">Maine</a></li>
-  <li><a href="MD" target="_top">Maryland</a></li>
-  <li><a href="MA" target="_top">Massachusetts</a></li>
-  <li><a href="MI" target="_top">Michigan</a></li>
-  <li><a href="MN" target="_top">Minnesota</a></li>
-  <li><a href="MS" target="_top">Mississippi</a></li>
-  <li><a href="MO" target="_top">Missouri</a></li>
-  <li><a href="MT" target="_top">Montana</a></li>
-  <li><a href="NE" target="_top">Nebraska</a></li>
-  <li><a href="NV" target="_top">Nevada</a></li>
-  <li><a href="NH" target="_top">New Hampshire</a></li>
-  <li><a href="NJ" target="_top">New Jersey</a></li>
-  <li><a href="NM" target="_top">New Mexico</a></li>
-  <li><a href="NY" target="_top">New York</a></li>
-  <li><a href="NC" target="_top">North Carolina</a></li>
-  <li><a href="ND" target="_top">North Dakota</a></li>
-  <li><a href="OH" target="_top">Ohio</a></li>
-  <li><a href="OK" target="_top">Oklahoma</a></li>
-  <li><a href="OR" target="_top">Oregon</a></li>
-  <li><a href="PA" target="_top">Pennsylvania</a></li>
-  <li><a href="RI" target="_top">Rhode Island</a></li>
-  <li><a href="SC" target="_top">South Carolina</a></li>
-  <li><a href="SD" target="_top">South Dakota</a></li>
-  <li><a href="TN" target="_top">Tennessee</a></li>
-  <li><a href="TX" target="_top">Texas</a></li>
-  <li><a href="UT" target="_top">Utah</a></li>
-  <li><a href="VT" target="_top">Vermont</a></li>
-  <li><a href="VA" target="_top">Virginia</a></li>
-  <li><a href="WA" target="_top">Washington</a></li>
-  <li><a href="WV" target="_top">West Virginia</a></li>
-  <li><a href="WI" target="_top">Wisconsin</a></li>
-  <li><a href="WY" target="_top">Wyoming</a></li>
-  </ul>
+    <div class="row SecondSection">
+      <div class="col-sm-12">
+        <p>a</p>
+      </div>
+    </div>
+
+ </div>
