--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
   <body>
 
     <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #077AAC;">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #003459;">
         <a class="navbar-brand" href="/">MyPrettyList</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
