--- a/views/houses/houses.hbs
+++ b/views/houses/houses.hbs
@@ -2,24 +2,28 @@
 
   <div class="row">
 
- <div class="col-2 list-group">
+    <div class="col-sm-2 list-group toScrollParent">
+      <div class="toScroll">
        {{#each states}}
       <a class="list-group-item list-group-item-action" href="{{this.acronym}}">{{this.name}}</a>
       {{/each}}
-  </div>
-  
-    <div class="col-10">
+      </div>
+    </div>
+
+    <div class="col-sm-10">
 
       <div class="row">
           {{#each house}}
-            <div class="col-4">
-            <div class="card" style="width: 18rem; margin-bottom: 2rem;">    
+            <div class="col-sm-6">
+            <div class="card" style="margin-bottom: 2rem;">    
                 {{#if imagePath}}
                   <img src="{{this.imagePath}}" class="card-img-top">
                 {{/if}}
               <div class="card-body">
                   <h5 class="card-title">{{this.title}}</h5>
                   <p class="card-text">{{this.description}}.</p>
+                 <p> <a href="#" class="btn btn-primary">Read more</a></p>
+                   <small>Last updated: {{this.updated_at}}</small>
               </div>
             <ul class="list-group list-group-flush">
                   <li  class="list-group-item">Price: {{this.price}}</li>
@@ -29,6 +33,7 @@
                   <li  class="list-group-item">Laundry on site: {{this.laundry}}</li>
                   <li  class="list-group-item">Available now: {{this.available}}</li>
             </ul>
+              
              </div>
             </div>
               {{/each}}
